--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<!--Strona HTML/CSS/JS wyświetlająca dane z pliku .csv oraz tworząca wykres:-->
+<!--
+    Dashboard - Kursy walut, kryptowalut, indeksów giełdowych i spółek
+    Copyright (C) 2025 Tomasz Lebioda <tlebioda@gmail.com>
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+-->
 <!doctype html>
 <html lang="pl">
     <head>
@@ -94,12 +110,18 @@
     </head>
     <body>
         <h1>Kursy walut, kryptowalut, indeksów giełdowych i spółek</h1>
-        <p>Wersja 1.3</p>
+        <p>Wersja 1.5.0</p>
         <p>
             Autor: Tomasz Lebioda,
             <a href="mailto:tomasz.lebioda@wyborcza.pl"
                 >tomasz.lebioda@wyborcza.pl</a
             >
+        </p>
+        <p style="font-size: 0.9em; color: #888;">
+            Licencja: GNU GPL v3.0 | 
+            <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" style="color: #007bff;">
+                Zobacz pełną treść licencji
+            </a>
         </p>
         <div class="controls">
             <input type="text" id="search" placeholder="Szukaj w tabeli..." />
