--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-    Dashboard - Kursy walut, kryptowalut, indeksów giełdowych i spółek
+    Dashboard - Currency, Cryptocurrency, Stock Index and Company Rates
     Copyright (C) 2025 Tomasz Lebioda <tlebioda@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
@@ -16,11 +16,11 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <!doctype html>
-<html lang="pl">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <title>
-            Dashboard – Kursy walut, kryptowalut, indeksów giełdowych i spółek
+            Dashboard – Currency, Cryptocurrency, Stock Index and Company Rates
         </title>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
@@ -109,38 +109,38 @@
         </style>
     </head>
     <body>
-        <h1>Kursy walut, kryptowalut, indeksów giełdowych i spółek</h1>
-        <p>Wersja 1.5.0</p>
+        <h1>Currency, Cryptocurrency, Stock Index and Company Rates</h1>
+        <p>Version 1.5.0</p>
         <p>
-            Autor: Tomasz Lebioda,
+            Author: Tomasz Lebioda,
             <a href="mailto:tomasz.lebioda@wyborcza.pl"
                 >tomasz.lebioda@wyborcza.pl</a
             >
         </p>
         <p style="font-size: 0.9em; color: #888;">
-            Licencja: GNU GPL v3.0 | 
+            License: GNU GPL v3.0 | 
             <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" style="color: #007bff;">
-                Zobacz pełną treść licencji
+                View full license text
             </a>
         </p>
         <div class="controls">
-            <input type="text" id="search" placeholder="Szukaj w tabeli..." />
-            <label>Eksport od: <input type="date" id="exportFrom" /></label>
-            <label>do: <input type="date" id="exportTo" /></label>
-            <label>Wykres od: <input type="date" id="chartFrom" /></label>
-            <label>do: <input type="date" id="chartTo" /></label>
+            <input type="text" id="search" placeholder="Search in table..." />
+            <label>Export from: <input type="date" id="exportFrom" /></label>
+            <label>to: <input type="date" id="exportTo" /></label>
+            <label>Chart from: <input type="date" id="chartFrom" /></label>
+            <label>to: <input type="date" id="chartTo" /></label>
             <select id="indexSelect" multiple size="6"></select>
             <button class="export-button" onclick="exportTableToCSV()">
-                Eksportuj do CSV
+                Export to CSV
             </button>
             <button class="svg-button" onclick="exportChartToSVG()">
-                Eksportuj wykres do SVG
+                Export chart to SVG
             </button>
             <button class="toggle-button" onclick="toggleTable()">
-                Pokaż/Ukryj tabelę
+                Show/Hide table
             </button>
             <button class="theme-button" onclick="toggleTheme()">
-                Przełącz motyw
+                Toggle theme
             </button>
         </div>
 
@@ -341,11 +341,11 @@
                         animation: false,
                         spanGaps: true,
                         scales: {
-                            x: { title: { display: true, text: "Data" } },
+                            x: { title: { display: true, text: "Date" } },
                             y: {
                                 title: {
                                     display: true,
-                                    text: "Wartość (Close)",
+                                    text: "Value (Close)",
                                 },
                                 beginAtZero: false,
                             },
