Add TA35 index and USD/ILS currency support
Removes Polish-specific currency description since we now support other
currency pairs too

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
                     "Canada S&P/TSX Composite",
                     "The US S&P 500",
                     "Japan Nikkei 225",
+                    "TA35",
                 ],
                 crypto: [
                     "Bitcoin",
@@ -309,7 +310,7 @@
                     "DOGE",
                     "USDT",
                 ],
-                currencies: ["USD/PLN", "EUR/PLN", "GBP/PLN"],
+                currencies: ["USD/PLN", "EUR/PLN", "GBP/PLN", "USD/ILS"],
                 stocks: ["Tesla", "Amazon", "SPAX.PVT"],
                 commodities: ["Crude Oil", "Natural Gas", "Gold", "Silver"],
             };
@@ -318,7 +319,7 @@
             const CATEGORY_DESCRIPTIONS = {
                 indices: "Stock market indices from major global exchanges",
                 crypto: "Cryptocurrency prices in USD",
-                currencies: "Foreign exchange rates against Polish Zloty",
+                currencies: "Foreign exchange rates",
                 stocks: "Individual company stock prices",
                 commodities:
                     "Commodity prices including precious metals and energy",
